--- a/assets/scss/colors/green.scss
+++ b/assets/scss/colors/green.scss
@@ -1,4 +1,4 @@
-$color-default: #36b6ff;
+$color-default: #0dcdbd;
 
 $color-default-darker: darken($color-default, 30%);
 $color-grey-dark: #474747;
