--- a/assets/scss/colors/grey.scss
+++ b/assets/scss/colors/grey.scss
@@ -1,4 +1,4 @@
-$color-default: #36b6ff;
+$color-default: #c4c4c4;
 
 $color-default-darker: darken($color-default, 30%);
 $color-grey-dark: #474747;
