--- a/assets/scss/colors/brown.scss
+++ b/assets/scss/colors/brown.scss
@@ -1,4 +1,4 @@
-$color-default: #36b6ff;
+$color-default: #c69c6d;
 
 $color-default-darker: darken($color-default, 30%);
 $color-grey-dark: #474747;
